<resources>
    <string name="app_name" translatable="false">Pixel Xpert</string>
    <string name="app_themed_icon_title">Alternative Themed Icon</string>
    <string name="xposed_desc">Customizations for Google Pixel devices</string>
    <string name="title_activity_settings" translatable="false">@string/app_name</string>
    <string name="volume_tile_title">Media Volume</string>
    <string name="sliding_tile_subtitle">Tap to adjust</string>
    <string name="app_switch_tile_title">Switch App Profile</string>
    <string name="hide_default">Hide (Default)</string>
    <string name="percent_of_default_size">% of default size</string>
    <string name="overlay_none_title">(Default)</string>
    <string name="general_section">General options</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="sysui_restart_needed">Requires a SystemUI restart to apply</string>
    <string name="restart_needed">Requires a reboot to apply</string>
    <string name="more_area">more area</string>
    <string name="less_area">less area</string>
    <string name="current_version">Current version: %s</string>
    <string name="notification_channel_update">Updates</string>
    <string name="notification_channel_update_desc">This channel shows notification about the latest updates.</string>
    <string name="new_update_title">Update available</string>
    <string name="new_update_desc">A new version of PixelXpert is available</string>
    <string name="skip_this_update">Skip this update</string>
    <string name="browser_not_found">Browser not found</string>
    <string name="settings_general_section_title">General</string>
    <string name="settings_update_section_title">Update</string>
    <string name="settings_misc_section_title">Misc</string>
    <string name="settings_about_section_title">About</string>
    <string name="settings_check_for_update_title">Check for updates</string>
    <string name="auto_update_title">Automatically check for updates</string>
    <string name="auto_update_summary">Check for new versions once in a while</string>
    <string name="update_over_wifi_title">Check updates over WiFi only</string>
    <string name="update_over_wifi_summary">Check for updates in background only when connected to wifi</string>
    <string name="github_repo_title">GitHub repository</string>
    <string name="github_repo_summary" translatable="false">siavash79/PixelXpert</string>
    <string name="telegram_group_title">Telegram channel</string>
    <string name="telegram_group_summary" translatable="false">\@PixelXpert_Github</string>
    <string name="usage_title">Usage</string>
    <string name="usage_summary">Open wiki page</string>
    <string name="crowdin_title">Translate to your language</string>
    <string name="crowdin_summary">Help us in translating %s into your own language</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="shrug" translatable="false">¯\\_(シ)_/¯</string>
    <string name="lockscreen_header_title">Lock screen</string>
    <string name="lockscreen_header_summary">Change your keyguard to match your taste</string>
    <string name="statusbar_header">Status bar</string>
    <string name="statusbar_header_summary">That thin bar that shows useful data</string>
    <string name="nav_header">Navigation bar</string>
    <string name="nav_header_summary">Change the way you navigate through apps</string>
    <string name="dialer_header">Phone &amp; dialer</string>
    <string name="dialer_header_summary">A bit of aid for your phone calls</string>
    <string name="misc_header">Miscellaneous</string>
    <string name="misc_header_summary">Whatever else offered by PixelXpert</string>
    <string name="qs_panel_category_title">Quick settings panel</string>
    <string name="qs_panel_category_summary">Brightness slider, flashlight level and more</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_summary">Customize visual style and iconography</string>
    <string name="pm_header">Package manager</string>
    <string name="pm_header_summary">Bypass security checks for apk files</string>
    <string name="hotspot_header">Portable hotspot</string>
    <string name="hotspot_header_summary">If you\'re into hidden WiFi stuff</string>
    <string name="hotspot_hide_ssid_title">Hide SSID</string>
    <string name="hotspot_inactivity_timeout_title">Inactivity timeout</string>
    <string name="hotspot_max_client_title">Maximum clients</string>
    <string name="hotspot_disable_approval_title">Hotspot connectivity issues workaround</string>
    <string name="hotspot_disable_approval_summary">Allow non-\"pre-approved\" clients to connect seamlessly</string>
    <string name="hotspot_force_unsupported_regions">Remove hotspot limitations in unsupported regions</string>
    <string name="depth_wallpaper_options">Depth effect wallpaper</string>
    <string name="hide_avatar_title">Remove user avatar (multi user mode)</string>
    <string name="transparent_fingerprint_circle">Remove background circle from under-display fingerprint</string>
    <string name="transparent_fingerprint_circle_off">Circle around fingerprint icon is active</string>
    <string name="transparent_fingerprint_circle_on">Circle around fingerprint icon will be hidden</string>
    <string name="custom_text_category">Custom text on Lockscreen</string>
    <string name="configure_carrier_text">Configure carrier text - Top of the screen</string>
    <string name="carrier_text_mod_disabled">Carrier text unchanged</string>
    <string name="carrier_text_mod_enabled">Custom carrier text</string>
    <string name="carrier_text_value">Custom carrier text</string>
    <string name="lockscreen_center_text_value">Clock area custom text</string>
    <string name="keyguard_dim_amount_title">Keyguard wallpaper dim</string>
    <string name="keyguard_bottom_category">Bottom area shortcuts</string>
    <string name="keyguard_bottom_buttons_transparent_title">Remove circle around icons</string>
    <string name="shufflePin_title">Shuffle Pin</string>
    <string name="wakeup_to_security_title">Show security input on device wake</string>
    <string name="easy_unlock_title">Easy unlock (Pin/Password)</string>
    <string name="easy_unlock_summary">If it didn\'t work the first time, try again</string>
    <string name="charging_info_title">Charging information on lockscreen</string>
    <string name="imperial_units_title">Use imperial units</string>
    <string name="double_tap_sleep_title">Double-tap to sleep</string>
    <string name="sbc_position_title">Clock position</string>
    <string name="sbc_ampm_style">AM/PM Style</string>
    <string name="sbc_show_secs">Show seconds</string>
    <string name="sbc_date_cat">Date options</string>
    <string name="sbc_day_of_week_options">Show day of week with clock</string>
    <string name="sbc_advanced_cat">Advanced (will supersede above setting!)</string>
    <string name="sbc_custom_date_before">Custom text before clock</string>
    <string name="sbc_date_small">Smaller size (70%)</string>
    <string name="sbc_custom_date_after">Custom text after clock</string>
    <string name="sbc_clock_color_category">Color options</string>
    <string name="sbc_colorful_title">Make it colorful</string>
    <string name="sbc_before_color">Text before clock</string>
    <string name="sbc_color">Clock</string>
    <string name="sbc_after_color">Text after clock</string>
    <string name="ntsb_threshold_title">Auto-hide threshold</string>
    <string name="ntsb_threshold_summary">Hide if traffic is less than… (Kilobytes)</string>
    <string name="network_mode_title">Monitor style</string>
    <string name="network_colorful_title">Make it colorful</string>
    <string name="network_download_top">Download speed on top</string>
    <string name="network_download_color_title">Download color</string>
    <string name="network_upload_color_title">Upload color</string>
    <string name="network_opacity_title">Opacity</string>
    <string name="network_interval_title">Refresh interval (seconds)</string>
    <string name="network_show_icons_title">Show traffic direction icons</string>
    <string name="BB_enable_title">Enable Battery Bar</string>
    <string name="BB_onlycharging_title">Only during charging</string>
    <string name="BB_move_SB_bottom_title">At bottom of Status bar</string>
    <string name="BB_colorful_title">Make it colorful</string>
    <string name="BB_Opacity_title">Bar opacity</string>
    <string name="BB_center_align_title">Center Aligned</string>
    <string name="BB_Thickness_title">Bar thickness</string>
    <string name="BB_indicate_charging">Indicate charging</string>
    <string name="BB_indicate_fast_charging">Indicate fast charging</string>
    <string name="BB_warning_level">Warning level range</string>
    <string name="BB_batteryCriticalColor">Critical level color</string>
    <string name="BB_batteryWarningColor">Warning level color</string>
    <string name="BB_batteryChargingColor">Charging color</string>
    <string name="BB_batteryFastChargingColor">Fast charging color</string>
    <string name="back_gesture_category_title">Configure back gesture</string>
    <string name="back_from_left_title">Left side of the screen</string>
    <string name="back_from_right_title">Right side of the screen</string>
    <string name="back_height_title">Gesture height</string>
    <string name="gesturenav_header">Gesture navigation</string>
    <string name="threebutton_header_title">3-Button navigation</string>
    <string name="modify_3button_title">Modify the buttons order</string>
    <string name="three_button_left_title">Left button</string>
    <string name="three_button_center_title">Center button</string>
    <string name="three_button_right_title">Right button</string>
    <string name="hide_navbar_title">Hide navigation bar</string>
    <string name="taskbar_as_recents_title">Convert Taskbar to PixelXpert recents bar</string>
    <string name="taskbar_height_title">Taskbar height</string>
    <string name="taskbar_radius_title">Taskbar corner curve</string>
    <string name="taskbar_status_title">Android Taskbar</string>
    <string name="taskbar_transient_title">Auto hide</string>
    <string name="so_taptaptorch_title">Enable double-tap for lockscreen torch</string>
    <string name="so_taptaptorch_summary">Double-tap and hold lockscreen for quick torch access</string>
    <string name="vibrate_on_call_active_title">Vibrate on outgoing call answered</string>
    <string name="vibrate_on_call_drop_title">Vibrate when call disconnects</string>
    <string name="vibration_type_notification">Intensity defined by system notification vibration settings</string>
    <string name="dialer_mute_record_message_title">Remove call recording announcement</string>
    <string name="dialer_mute_record_message_summary">Only applies to Google phone app with call recording enabled</string>
    <string name="radio_force_volte_nr">Force VoLTE/NR in unsupported regions</string>
    <string name="radio_force_ss_over_ut">Force SS over UT in unsupported regions</string>
    <string name="radio_force_cross_sim">Force Cross-SIM calling in unsupported regions</string>
    <string name="radio_force_wfc">Force WFC (Wi-Fi Calling) in unsupported regions</string>
    <string name="menu_settings_title">Import/Export</string>
    <string name="menu_reset_defaults">Reset all settings</string>
    <string name="menu_import_settings">Import settings from file…</string>
    <string name="menu_export_settings">Export settings to file…</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_restart_system">Restart system</string>
    <string name="menu_soft_restart">Soft reboot</string>
    <string name="menu_restartSysUI">Restart SystemUI</string>
    <string name="hooked_packages_title">Connected packages</string>
</resources>