<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/hooked_packages"
		android:title="@string/hooked_packages_title" />
	<item android:title="@string/menu_settings_title">
		<menu>
			<item
				android:id="@+id/menu_exportPrefs"
				android:title="@string/menu_export_settings" />
			<item
				android:id="@+id/menu_importPrefs"
				android:title="@string/menu_import_settings" />
			<item
				android:id="@+id/menu_clearPrefs"
				android:title="@string/menu_reset_defaults" />
		</menu>
	</item>
	<item
		android:title="@string/menu_restart">
		<menu>
			<item
				android:id="@+id/menu_restartSysUI"
				android:title="@string/menu_restartSysUI" />
			<item
				android:id="@+id/menu_soft_restart"
				android:title="@string/menu_soft_restart" />
			<item
				android:id="@+id/menu_restart"
				android:title="@string/menu_restart_system" />
		</menu>
	</item>

</menu>