<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="BBarEnabled"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_enable_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="BBOnlyWhileCharging"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_onlycharging_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="BBOnBottom"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_move_SB_bottom_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="BBarColorful"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_colorful_title" />
    <SeekBarPreference
        android:defaultValue="100"
        android:key="BBOpacity"
        android:title="@string/BB_Opacity_title"
        app:showSeekBarValue="true"
        app:updatesContinuously="true" />
    <SeekBarPreference
        android:defaultValue="50"
        android:key="BBarHeight"
        android:title="@string/BB_Thickness_title"
        app:updatesContinuously="true"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="BBSetCentered"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_center_align_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="indicateCharging"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_indicate_charging" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="indicateFastCharging"
        android:summaryOff="@string/general_off"
        android:summaryOn="@string/general_on"
        android:title="@string/BB_indicate_fast_charging" />
    <SeekBarPreference
        android:layout_width="wrap_content"
        android:defaultValue="15"
        android:key="batteryCriticalLevel"
        android:max="20"
        android:title="@string/BB_critical_level"
        app:min="0"
        app:showSeekBarValue="true"/>
    <SeekBarPreference
        android:layout_width="wrap_content"
        android:defaultValue="40"
        android:key="batteryWarningLevel"
        android:max="40"
        android:title="@string/BB_warning_level"
        app:min="20"
        app:showSeekBarValue="true"/>
    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="-65536"
        android:key="batteryCriticalColor"
        android:title="@string/BB_batteryCriticalColor" />
    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="-256"
        android:key="batteryWarningColor"
        android:title="@string/BB_batteryWarningColor" />
    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="-16711936"
        android:key="batteryChargingColor"
        android:title="@string/BB_batteryChargingColor" />
    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="-16776961"
        android:key="batteryFastChargingColor"
        android:title="@string/BB_batteryFastChargingColor" />
</PreferenceScreen>