<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<sh.siava.AOSPMods.ui.MaterialListPreference
		android:defaultValue="0"
		android:entries="@array/network_mode_names"
		android:entryValues="@array/network_mode_codes"
		android:key="networkTrafficMode"
		android:summary="%s"
		android:title="@string/network_mode_title"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialSwitchPreference
		android:defaultValue="true"
		android:key="networkTrafficRXTop"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/network_download_top"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialSwitchPreference
		android:defaultValue="true"
		android:key="networkTrafficShowIcons"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/network_show_icons_title"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialSeekbarPreference
		android:defaultValue="1"
		android:key="networkTrafficInterval"
		android:max="5"
		android:min="1"
		android:title="@string/network_interval_title"
		app:iconSpaceReserved="false"
		app:min="1"
		app:updatesContinuously="true" />

	<sh.siava.AOSPMods.ui.MaterialEditTextPreference
		android:key="networkTrafficThreshold"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:summary="@string/ntsb_threshold_summary"
		android:title="@string/ntsb_threshold_title"
		app:defaultValue="10"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="networkTrafficColorful"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/network_colorful_title"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialColorPreference
		android:defaultValue="-7617718"
		android:key="networkTrafficDLColor"
		android:title="@string/network_download_color_title"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialColorPreference
		android:defaultValue="-351845"
		android:key="networkTrafficULColor"
		android:title="@string/network_upload_color_title"
		app:iconSpaceReserved="false" />

	<sh.siava.AOSPMods.ui.MaterialSeekbarPreference
		android:defaultValue="100"
		android:key="networkTrafficOpacity"
		android:title="@string/network_opacity_title"
		app:iconSpaceReserved="false"
		app:isPreferenceVisible="false"
		app:updatesContinuously="true" />

</PreferenceScreen>