<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<sh.siava.AOSPMods.ui.MaterialPreference
		app:fragment="sh.siava.AOSPMods.SettingsActivity$GestureNavFragment"
		android:key="gesturenav_header"
		android:title="@string/gesturenav_header" />

	<sh.siava.AOSPMods.ui.MaterialPreference
		app:fragment="sh.siava.AOSPMods.SettingsActivity$ThreeButtonNavFragment"
		android:key="threebutton_header"
		android:title="@string/threebutton_header_title" />

	<sh.siava.AOSPMods.ui.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="HideNavbarOverlay"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/hide_navbar_title" />

	<sh.siava.AOSPMods.ui.MaterialListPreference
		android:defaultValue="0"
		android:entries="@array/taskbar_option_names"
		android:entryValues="@array/taskbar_option_value"
		android:key="taskBarMode"
		android:summary="%s"
		android:title="@string/taskbar_status_title" />

	<!--SwitchPreference
		android:defaultValue="false"
		android:key="TaskbarHideAllAppsIcon"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/taskbar_hide_allapps_title" /-->

	<sh.siava.AOSPMods.ui.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="TaskbarTransient"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/taskbar_transient_title" />

	<sh.siava.AOSPMods.ui.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="TaskbarAsRecents"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/taskbar_as_recents_title" />

	<sh.siava.AOSPMods.ui.MaterialRangeSliderPreference
		android:key="taskbarHeightOverride"
		app:defaultValue="100"
		app:maxVal="300"
		app:minVal="50"
		app:tickInterval="10"
		android:title="@string/taskbar_height_title"
		app:updatesContinuously="false" />

	<sh.siava.AOSPMods.ui.MaterialRangeSliderPreference
		android:key="TaskbarRadiusOverride"
		app:defaultValue="1"
		app:maxVal="2"
		app:minVal="0"
		app:tickInterval=".1"
		android:title="@string/taskbar_radius_title"
		app:updatesContinuously="false" />

</PreferenceScreen>