<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="visible">
    <PreferenceCategory android:title="@string/back_gesture_category_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="BackFromLeft"
            android:title="@string/back_from_left_title" />
        <SeekBarPreference
            android:key="BackLeftHeight"
            android:defaultValue="100"
            app:title="@string/back_height_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="BackFromRight"
            android:title="@string/back_from_right_title" />
        <SeekBarPreference
            android:key="BackRightHeight"
            android:defaultValue="100"
            app:title="@string/back_height_title" />

    </PreferenceCategory>

</PreferenceScreen>